--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.mikepenz:materialdrawer:4.6.4'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.hannesdorfmann.mosby:mvp:2.0.0'
+    compile 'com.android.support:cardview-v7:23.1.1'
 }
